# modulo

./: .gitignore  CMakeLists.txt  ycm_extra_conf_sample.py
src/modulo/: CMakeLists.txt
src/modulo/modulo/: modulo.h  stdatomic.h
src/modulo/modulo/mpmc/: base.h  controller.c  controller.h  pool.c  pool.h  queue.c  queue.h
src/modulo/modulo/pool/: pool.c  pool.h
src/modulo/modulo/solver/: controller.c  controller.h  mpmc_types.c  mpmc_types.h  node.c  node.h
src/modulo/modulo/spmc/: base.h  controller.c  controller.h  queue.c  queue.h
src/terminal/: CMakeLists.txt  main.c
